# aiplc

./: .gitignore  README.md  announcement_tip.toml
.github/workflows/: bazel.yml  ci.yml  claim-aiplc-npm.yml  issue-deduplicator.yml  rust-ci-full.yml  rust-ci.yml  rust-release.yml  rusty-v8-release.yml  v8-canary.yml
.tmp/: add_openness_user.ps1  build_adapter_csc.ps1  build_adapter_csc_debug.ps1  check_tia_install.ps1  check_windows_build_tools.ps1  check_winget_children.ps1  elevated_fix_tia_reboot_loop.ps1  find_modern_msbuild.ps1  find_roslyn.ps1  fix_tia_reboot_loop.ps1  inspect_tia_reboot_loop.ps1  pending-file-rename-after.txt  query_task_xml.ps1  query_tia_task_and_process.ps1  read_openness_registry.ps1  sia-starter-after-relaunch.txt  start-processes-after.txt
.tmp/tia_reboot_fix_backup/: pending-file-rename-before.txt  session-manager-before.reg  sia-starter-before-tail.txt
adapters/siemens-tia-openness/: README.md
codex-cli/: package.json
codex-cli/scripts/: build_npm_package.py  (+1 more)
codex-rs/: Cargo.toml
codex-rs/plc-mcp-server/: BUILD.bazel  Cargo.toml
codex-rs/plc-mcp-server/src/: advanced_types.rs  integration_types.rs  lib.rs  main.rs  protocol.rs  server.rs  tooling.rs  types.rs
codex-rs/plc-mcp-server/src/backend/: mock.rs  mod.rs  subprocess.rs
codex-rs/plc-mcp-server/src/backend/mock/: integration.rs
codex-rs/plc-mcp-server/tests/: manual_windows_acceptance.rs  mcp_mock_flow.rs
codex-rs/plc-mcp-server/tests/common/: mod.rs
docs/: getting-started.md  install.md  memories.md  plc-tia-portal.md
scripts/: stage_npm_packages.py
(+31 files in other folders)
